--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,3 +14,16 @@ shut the fuck up i dont have time to resolve some shitty "global css cannot be i
 .scroll::-webkit-scrollbar-thumb {
     background-color: #444459;
 }
+
+.ReactModal__Overlay {
+    opacity: 0;
+    transition: opacity .5s;
+  }
+  
+  .ReactModal__Overlay--after-open {
+    opacity: 1;
+  }
+  
+  .ReactModal__Overlay--before-close {
+    opacity: 0;
+  }
