added some stuff to posts

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,3 +31,7 @@ shut the fuck up i dont have time to resolve some shitty "global css cannot be i
 body {
   margin: 0px;
 }
+
+textarea:focus, input:focus{
+  outline: none;
+}
