--- a/styles/topbar.module.css
+++ b/styles/topbar.module.css
@@ -4,9 +4,15 @@
 	}
 }
 .topbar {
+	z-index: 1;
+	top: -1px; /* It sort of pokes out with like a pixel while testing for 0px so i move it up a bit */
+	position: sticky;
 	display: flex;
 	overflow: hidden;
-	transition: height .5s,
+	transition: height .5s;
+	border-radius: 0px 0px 4px 4px;
+	margin-bottom: 8px;
+	box-shadow: 0 8px 10px rgb(0 0 0 / 44%);
 }
 @media screen and (min-width: 750px) {
 	.topbar {
