--- a/styles/tab.module.css
+++ b/styles/tab.module.css
@@ -9,3 +9,11 @@
 	box-shadow: unset;
 	position: relative
 }
+.button {
+	padding: 0px;
+	width: 100%;
+	height: 35px;
+	display: flex;
+	align-items: center;
+	font-size: 23px;
+}
