--- a/styles/global.scss
+++ b/styles/global.scss
@@ -14,6 +14,10 @@ shut the fuck up i dont have time to resolve some shitty "global css cannot be i
 }
 
 button {
+  &[disabled] {
+    cursor: unset;
+  }
+  cursor: pointer;
   border: none;
 }
 
@@ -38,10 +42,7 @@ button {
     opacity: 0;
   }
 
-button {
-  cursor: pointer;
-  border: none;
-}
+
 
 body {
   margin: 0px;
