--- a/styles/modals/settingspage.module.scss
+++ b/styles/modals/settingspage.module.scss
@@ -1,5 +1,6 @@
 @import "./modals.scss";
 @import "../themes.scss";
+@import "../util.scss";
 
 .settingspage {
 	@include modal;
@@ -11,13 +12,62 @@
 	min-height: 200px;
 }
 
+.sidebar_tab {
+	&[data-selected=false] {
+		@include button-shadow;
+	}
+	width: 100%;
+	height: 30px;
+	font-size: 20px;
+	border-radius: 4px;
+	text-align: left;
+	margin-bottom: 3px;
+	transition: color .5s, box-shadow .5s;
+	@include themed(){
+		color: t($text);
+		background-color: t($bg-2);
+	}
+}
+
+$option-size: 30px;
+
+@mixin option {
+	width: $option-size;
+	height: $option-size;
+	&[data-selected=true] {
+		padding: 5px;
+		.inner {
+			opacity: 1;
+		}
+	}
+	&[data-selected=false] {
+		padding: calc( $option-size / 2 );
+		.inner {
+			opacity: 0;
+		}
+	}
+	transition: padding .2s;
+	flex-shrink: 0;
+
+}
+
 .radio_select {
+	@include option;
 	@include themed(){
 		background-color: t($bg-2);
 	}
-	width: 30px;
-	height: 30px;
-	padding: 5px;
 	border-radius: 50%;
-	flex-shrink: 0;
+}
+
+.checkbox {
+	@include option;
+	@include themed(){
+		background-color: t($bg-2);
+	}
+}
+
+.inner {
+	width: 100%;
+	height: 100%;
+	transition: opacity .2s
 }
