moved settings context to redux

--- a/styles/modals/modals.scss
+++ b/styles/modals/modals.scss
@@ -1,3 +1,4 @@
+@import "../themes.scss";
 @mixin modal {
 	position: absolute;
 	inset: 50% 0% 0% 50%;
@@ -5,4 +6,8 @@
 	border-radius: 8px;
 	overflow: hidden;
 	border: none;
+	@include themed(){
+		background-color: t($bg-2);
+		color: t($text);
+	}
 }
