--- a/styles/maincontent.module.scss
+++ b/styles/maincontent.module.scss
@@ -1,8 +1,11 @@
+@import "./themes.scss";
+
 @media screen and (max-width: 750px) {
 	.topbar {
 		height: 50px;
 	}
 }
+
 .topbar {
 	z-index: 1;
 	top: -1px; /* It sort of pokes out with like a pixel while testing for 0px so i move it up a bit */
@@ -13,9 +16,30 @@
 	border-radius: 0px 0px 4px 4px;
 	margin-bottom: 8px;
 	box-shadow: 0 8px 10px rgb(0 0 0 / 44%);
+	@include themed(){
+		background-color: t($bg-3);
+		.sidebar_btn {
+			background-color: t($bg-2);
+		}
+	}
+	.sidebar_btn {
+		display: flex;
+		align-items: center;
+		width: 35px;
+		height: 35px;
+		margin: 7px;
+		border-radius: 2px;
+	}
 }
+
 @media screen and (min-width: 750px) {
 	.topbar {
 		height: 0px;
+	}
+}
+
+.posts_loading_text {
+	@include themed(){
+		color: t($text);
 	}
 }
