--- a/styles/modals/settingspage.module.scss
+++ b/styles/modals/settingspage.module.scss
@@ -3,71 +3,138 @@
 @import "../util.scss";
 
 .settingspage {
-	@include modal;
-	height: 50%;
-	width: 50%;
-	max-width: min(600px, 100vw);
-	min-width: min(450px, 100vw);
-	max-height: 400px;
-	min-height: 200px;
+    @include modal;
+    height: 50%;
+    width: 50%;
+    max-width: min(600px, 100vw);
+    min-width: min(450px, 100vw);
+    max-height: 400px;
+    min-height: 200px;
+	@include themed(){
+		background-color: t($bg-3);
+		> header {
+			height: 60px;
+			background-color: t($bg-2);
+	
+		}
+	}
+}
+
+.section {
+    @include themed() {
+        background: t($bg-1);
+    }
+
+    width: 100%;
+    margin-top: 10px;
+    padding: 4px;
+    border-radius: 8px;
+
+    h1 {
+        margin: 0px 0px 4px 0px
+    }
+}
+
+.options_page {
+    @include scroll;
+
+    &[data-selected=true] {
+        pointer-events: unset;
+        opacity: 1;
+    }
+
+    &[data-selected=false] {
+        pointer-events: none;
+        opacity: 0;
+    }
+
+    transition: opacity .3s;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    padding: 8px;
+    overflow: auto;
+
+    > div {
+        @include themed() {
+            background-color: t($bg-2);
+        }
+
+        width: 100%;
+        border-radius: 8px;
+        padding: 0px 8px 8px 8px;
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 .sidebar_tab {
-	&[data-selected=false] {
-		@include button-shadow;
-	}
-	width: 100%;
-	height: 30px;
-	font-size: 20px;
-	border-radius: 4px;
-	text-align: left;
-	margin-bottom: 3px;
-	transition: color .5s, box-shadow .5s;
-	@include themed(){
-		color: t($text);
-		background-color: t($bg-2);
-	}
+    &[data-selected=false] {
+        @include button-shadow;
+    }
+
+    width: 100%;
+    height: 30px;
+    font-size: 20px;
+    border-radius: 4px;
+    text-align: left;
+    margin-bottom: 3px;
+    transition: color .5s,
+    box-shadow .5s;
+
+    @include themed() {
+        color: t($text);
+        background-color: t($bg-2);
+    }
 }
 
 $option-size: 30px;
 
 @mixin option {
-	width: $option-size;
-	height: $option-size;
-	&[data-selected=true] {
-		padding: 5px;
-		.inner {
-			opacity: 1;
-		}
-	}
-	&[data-selected=false] {
-		padding: calc( $option-size / 2 );
-		.inner {
-			opacity: 0;
-		}
-	}
-	transition: padding .2s;
-	flex-shrink: 0;
+    width: $option-size;
+    height: $option-size;
+
+    &[data-selected=true] {
+        padding: 5px;
+
+        .inner {
+            opacity: 1;
+        }
+    }
+
+    &[data-selected=false] {
+        padding: calc($option-size / 2);
+
+        .inner {
+            opacity: 0;
+        }
+    }
+
+    transition: padding .2s;
+    flex-shrink: 0;
 
 }
 
 .radio_select {
-	@include option;
-	@include themed(){
-		background-color: t($bg-2);
-	}
-	border-radius: 50%;
+    @include option;
+
+    @include themed() {
+        background-color: t($bg-2);
+    }
+
+    border-radius: 50%;
 }
 
 .checkbox {
-	@include option;
-	@include themed(){
-		background-color: t($bg-2);
-	}
+    @include option;
+
+    @include themed() {
+        background-color: t($bg-2);
+    }
 }
 
 .inner {
-	width: 100%;
-	height: 100%;
-	transition: opacity .2s
+    width: 100%;
+    height: 100%;
+    transition: opacity .2s
 }
