--- a/styles/post.module.scss
+++ b/styles/post.module.scss
@@ -6,24 +6,40 @@
 	white-space: pre-wrap
 }
 
-.user_details {
-	height: 100%;
-	cursor: pointer;
-	user-select: none;
-
-	@include themed(){
-		.username {
-			color: t($text)
-		}
-	}
-}
-
 .post {
 	@include themed(){
 		background-color: t($bg-1);
 		color: t($text-2)
 	}
-	margin-bottom: 5px
+	margin-bottom: 5px;
+
+	.body {
+		min-width: 300;
+		width: 100%;
+
+		.data {
+			margin: 6px;
+			width: 100%;
+			padding: 4;
+			justify-content: space-between;
+			border-radius: 4;
+			height: 30;
+			display: flex;
+			align-items: center;
+			
+			.user_details {
+				height: 100%;
+				cursor: pointer;
+				user-select: none;
+			
+				@include themed(){
+					.username {
+						color: t($text)
+					}
+				}
+			}
+		}
+	}
 }
 
 .post_action {
