--- a/styles/comment.module.scss
+++ b/styles/comment.module.scss
@@ -33,6 +33,19 @@
     flex-direction: column;
 }
 
+.input {
+    @include themed(){
+        color: t($text-2);
+    }
+    font-family: unset;
+    width: 100%;
+    background-color: "transparent";
+    border: none;
+    padding: 0px;
+    margin: 0px;
+    resize: none;
+}
+
 .comment {
     @include themed(){
         .username {
