sign in page stuff

--- a/styles/comment.module.scss
+++ b/styles/comment.module.scss
@@ -39,7 +39,7 @@
     }
     font-family: unset;
     width: 100%;
-    background-color: "transparent";
+    background-color: transparent;
     border: none;
     padding: 0px;
     margin: 0px;
