--- a/styles/mainsidebar.module.scss
+++ b/styles/mainsidebar.module.scss
@@ -20,6 +20,7 @@
 		top: 0px;
 	}
 	.sidebar_inner {
+		@include button-shadow;
 		height: 100vh;
 		@include themed(){
 			background-color: t($bg-1);
