--- a/styles/modals/settingspage.module.scss
+++ b/styles/modals/settingspage.module.scss
@@ -126,7 +126,7 @@
     &[data-selected=false] {
         @include button-shadow;
     }
-
+    user-select: none;
     width: 100%;
     height: 30px;
     font-size: 20px;
