--- a/styles/util.scss
+++ b/styles/util.scss
@@ -28,7 +28,7 @@
 	  background-color: rgba(0, 0, 0, 0);
 	  width: 5px;
 	}
-	&:-webkit-scrollbar-thumb {
+	&::-webkit-scrollbar-thumb {
 	  background-color: #444459;
 	}
   }
